--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -2,7 +2,7 @@
 
 @using SmartStore.Web.Models.Catalog;
 
-<div class="offcanvas-cart-body">
+<div class="offcanvas-cart-body offcanvas-scrollable">
     @if (Model.Items.Count == 0)
     {
         <div class="no-items">
