--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/ShopBar.Tools.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/ShopBar.Tools.cshtml
@@ -99,7 +99,7 @@
 @using (Html.BeginZoneContent("end", key: "offcanvas-menu"))
 {
 	<aside id="offcanvas-menu" class="offcanvas offcanvas-overlay offcanvas-left offcanvas-shadow" data-blocker="true" data-overlay="true" data-placement="left">
-		<div class="offcanvas-content">
+		<div class="offcanvas-content offcanvas-scrollable">
 			<!-- AJAX -->
 		</div>
 	</aside>
