--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
@@ -7,7 +7,7 @@
     int attrMaxLength = Model.ShowProductImages ? 50 : 70;
 }
 
-<div class="offcanvas-cart-body">
+<div class="offcanvas-cart-body offcanvas-scrollable">
 	@if (Model.Items.Count == 0) 
 	{
 		<div class="no-items">
