--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
@@ -18,7 +18,7 @@
     }
 }
 
-<div class="offcanvas-cart-body">
+<div class="offcanvas-cart-body offcanvas-scrollable">
 	@if (Model.TotalProducts == 0)
     {
 		<div class="no-items">
