--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_offcanvas.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_offcanvas.scss
@@ -159,8 +159,7 @@ body.canvas-blocking .canvas-blocker {
     position: absolute;
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden;
     touch-action: none;
 }
 
