--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_menu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_menu.scss
@@ -1,4 +1,5 @@
 ﻿/// <reference path="bs4/scss/bootstrap.scss" />
+/// <reference path="shared/_mixins.scss" />
 
 $ocm-border-color:                      rgba(#000, 0.15);
 $ocm-horizontal-padding:                1.6rem;
@@ -39,21 +40,18 @@ $ocm-horizontal-padding:                1.6rem;
 
     .offcanvas-menu-footer {
         background: $gray-lightest;
-        border-top: 1px solid $ocm-border-color;
         padding: 1rem;
 
         .mf-dropdown {
             display: block;
             
             .btn-labeled > b {
-                background: #fff;
+                background: transparent;
             }
         }
     }
 
     .navbar-nav {
-        padding: 0 $ocm-horizontal-padding;
-    
         .nav-item {
             margin: 0;
             float: none;
@@ -64,19 +62,20 @@ $ocm-horizontal-padding:                1.6rem;
             .nav-link {
                 display: block;
                 color: $body-color;
-                padding: 0.625rem 2rem 0.625rem 0.625rem;    
+                line-height: 1.3;
+                padding: 1rem 2rem;
+                
+                &:active { background-color: rgba(#000, 0.05); }   
             }
-        
-            .fa {
-                color: $body-color;
-            }
-            .fa-chevron-right {
+            
+            &.has-children:after {
                 position: absolute;
                 right: 1rem;
-                top: 1.125rem;
-            }
-            .fa-chevron-left {
-                margin-right: .2rem;
+                top: 50%;
+                transform: translateY(-50%);
+
+                @include linearicon('\e876');
+                //@include fontawesome('\f054');
             }
         }
     }
@@ -86,7 +85,7 @@ $ocm-horizontal-padding:                1.6rem;
     }
 
     .navbar-nav .go-to-current-cat {
-        font-weight: bold;
+        font-weight: 600;
     }
 
     .button-bar {
@@ -113,7 +112,7 @@ $ocm-horizontal-padding:                1.6rem;
 }
 .ocm-home-layer,
 .ocm-nav-layer {
-    transition: transform 0.4s ease-in-out !important;
+    transition: transform 0.3s ease-out;
     background: #fff;
 }
 .ocm-nav-layer {
