--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
@@ -8,9 +8,12 @@
 
 <div class="category-container">
 
-    <div class="category-info">
-        <div class="category-name">@Model.Name</div>
-    </div>
+	@if (Model.Name.HasValue())
+	{
+		<div class="category-info">
+			<div class="category-name">@Model.Name</div>
+		</div>
+	}
 
     <ul class="nav navbar-nav">
 
@@ -19,7 +22,7 @@
             <li class="back-to-parent-cat nav-item" data-id="@Model.ParentCategory.Id">
                 <a href="@Url.RouteUrl("Category", new { SeName = Model.ParentCategory.SeName })" class="nav-link">
                     <i class="fa fa-chevron-left"></i>
-                    @T("Zurück")
+					<span>@T("Common.Back")</span>
                 </a>
             </li>
 
@@ -32,15 +35,10 @@
 
         @foreach (var cat in Model.SubCategories)
         {
-            <li class="sub-cat nav-item" data-id="@cat.Id" data-ajax="@(cat.HasChildren ? "true" : "false")">
+            <li class="sub-cat nav-item@(cat.HasChildren ? " has-children" : "")" data-id="@cat.Id" data-ajax="@(cat.HasChildren ? "true" : "false")">
                 <a href="@Url.RouteUrl("Category", new { SeName = cat.SeName })" class="nav-link">
                     @cat.Name
                 </a>
-
-                @if (cat.HasChildren)
-                {
-                    <i class="fa fa-chevron-right"></i>
-                }
             </li>
         }
     </ul>
