--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/ShopBar.Tools.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/ShopBar.Tools.cshtml
@@ -98,7 +98,7 @@
 
 @using (Html.BeginZoneContent("end", key: "offcanvas-menu"))
 {
-	<aside id="offcanvas-menu" class="offcanvas offcanvas-lg offcanvas-overlay offcanvas-left offcanvas-shadow" data-lg="true" data-blocker="true" data-overlay="true" xdata-placement="left">
+	<aside id="offcanvas-menu" class="offcanvas x-offcanvas-lg offcanvas-overlay offcanvas-left offcanvas-shadow" x-data-lg="true" data-blocker="true" data-overlay="true" x-data-placement="left">
         <div class="offcanvas-content">
             <div id="menu-container" class="offcanvas-scrollable" 
                  data-url-home="@(Url.Action("OffCanvasMenu", "Catalog"))" 
