Theming: major cleanup (removed old product detail template stuff)

--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.AssociatedProduct.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.AssociatedProduct.cshtml
@@ -3,7 +3,7 @@
 @using SmartStore.Web;
 
 @{ 
-	string updateUrl = Url.Action("UpdateProductDetails3", "Product", new
+	string updateUrl = Url.Action("UpdateProductDetails", "Product", new
 	{
 		productId = Model.Id,
 		bundleItemId = Model.BundleItem.Id,
