--- a/src/Presentation/SmartStore.Web/Views/Product/Product.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Product.cshtml
@@ -20,7 +20,7 @@
 		Html.AddCanonicalUrlParts(productUrl);
 	}
 
-	string updateUrl = Url.Action("UpdateProductDetails3", "Product", new
+	string updateUrl = Url.Action("UpdateProductDetails", "Product", new
 	{
 		productId = Model.Id,
 		bundleItemId = Model.BundleItem.Id,
