Multiple attribute options sets (in progress)

--- a/src/Presentation/SmartStore.Web/Administration/Views/ProductAttribute/_CreateOrUpdateOption.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ProductAttribute/_CreateOrUpdateOption.cshtml
@@ -5,7 +5,7 @@
 @Html.ValidationSummary(false)
 @Html.HiddenFor(model => model.Id)
 @Html.HiddenFor(model => model.ProductVariantAttributeId)
-@Html.HiddenFor(model => model.ProductAttributeId)
+@Html.HiddenFor(model => model.ProductAttributeOptionsSetId)
 @Html.HiddenFor(model => model.IsListTypeAttribute)
 
 <table class="adminContent">
