--- a/src/Presentation/SmartStore.Web/Administration/Views/ProductAttribute/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ProductAttribute/_CreateOrUpdate.cshtml
@@ -153,12 +153,17 @@
 						.EnableCustomBinding(true)
 						.DetailView(details => details.ClientTemplate(
 							Html.Telerik().Grid<ProductAttributeOptionModel>()
-								.Name("productattributeoptions-<#= Id #>-grid")
+								.Name("productattributeoptions-grid<#= Id #>")
 								.DataKeys(keys =>
 								{
 									keys.Add(x => x.Id);
 									keys.Add(x => x.ProductAttributeOptionsSetId).RouteKey("optionsSetId");
 								})
+								.ToolBar(commands => commands.Custom()
+									.Name("insert-option")
+									.HtmlAttributes(new { href = "#", @class = "btn btn-link insert-option" })
+									.Text("<i class='fa fa-plus'></i>&nbsp;" + @T("Common.Options.Add"))
+								)
 								.Columns(columns =>
 								{
 									columns.Bound(x => x.Name)
@@ -176,86 +181,77 @@
 									columns.Bound(x => x.DisplayOrder)
 										.Centered();
 									columns.Bound(x => x.Id)
-										.Width(120)
+										.Width(220)
 										.Centered()
 										.Title("")
-										.ClientTemplate("<input type='submit' value='" + @T("Admin.Common.Edit").Text + "' onclick=\"" + "javascript:openPopup('" + @Url.Content("~/Admin/ProductAttribute/OptionEditPopup/") + "<#= Id #>?btnId=btnRefresh&formId=productattributeoptionsset-grid'); return false;\" class='btn' />");
-									columns.Command(commands =>
-									{
-										commands.Delete().Localize(T);
-									})
-									.Width(120);
+										.ClientTemplate(
+											"<a href='" + @Url.Content("~/Admin/ProductAttribute/OptionEditPopup/") + "<#= Id #>?btnId=btnOptionRefresh' class='t-button edit-option'>" + @T("Admin.Common.Edit") + "</a>" +
+											"<a href='" + @Url.Action("OptionDelete", "ProductAttribute") + "/<#= Id #>?btnId=btnOptionRefresh' class='t-button delete-option'>" + @T("Admin.Common.Delete") + "</a>");
 								})
 								.DataBinding(dataBinding => dataBinding.Ajax()
-									.Select("OptionsSetListDetails", "ProductAttribute", new { optionsSetId = "<#= Id #>" })
-									.Delete("OptionDelete", "ProductAttribute"))
+									.Select("OptionsSetListDetails", "ProductAttribute", new { id = "<#= Id #>" })
+								)
+								.ClientEvents(events => events.OnDataBound("onDataBoundOptionsGrid"))
 								.ToHtmlString()
 						)))
 				</td>
 			</tr>
-
-			@*<tr>
-				<td>
-					@(Html.Telerik().Grid<ProductAttributeOptionModel>()
-					.Name("productattributeoptions-grid")
-						.DataKeys(x =>
-						{
-							x.Add(y => y.Id).RouteKey("optionId");
-							x.Add(y => y.ProductAttributeId).RouteKey("productAttributeId");
-						})
-						.Columns(columns =>
-						{
-							columns.Bound(x => x.Name)
-								.ReadOnly()
-								.ClientTemplate(@Html.VariantAttributeValueName());
-							columns.Bound(x => x.Alias);
-							columns.Bound(x => x.LinkedProductName)
-								.ReadOnly()
-								.ClientTemplate(@Html.LabeledProductName("LinkedProductId", "LinkedProductName", "LinkedProductTypeName", "LinkedProductTypeLabelHint"));
-							columns.Bound(x => x.PriceAdjustmentString)
-								.Centered();
-							columns.Bound(x => x.WeightAdjustmentString)
-								.Centered();
-							columns.Bound(x => x.IsPreSelected)
-								.ClientTemplate(@Html.SymbolForBool("IsPreSelected"))
-								.Centered();
-							columns.Bound(x => x.DisplayOrder)
-								.Centered();
-							columns.Bound(x => x.Id)
-								.Width(120)
-								.Centered()
-								.Title("")
-								.ClientTemplate("<input type='submit' value='" + @T("Admin.Common.Edit").Text + "' onclick=\"" + "javascript:openPopup('" + @Url.Content("~/Admin/ProductAttribute/OptionEditPopup/") + "<#= Id #>?btnId=btnRefresh&formId=productattribute-form'); return false;\" class='btn' />");
-							columns.Command(commands =>
-							{
-								commands.Delete().Localize(T);
-							})
-							.Width(120);
-						})
-						.DataBinding(dataBinding => dataBinding.Ajax()
-							.Select("OptionList", "ProductAttribute", new { productAttributeId = Model.Id })
-							.Delete("OptionDelete", "ProductAttribute"))
-						.EnableCustomBinding(true))
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<button type="submit" id="btnAddNewOption" name="btnAddNewOption" class="btn btn-below"
-							onclick="javascript:openPopup('@(Url.Action("OptionCreatePopup", "ProductAttribute", new { productAttributeId = Model.Id, btnId = "btnRefresh", formId = "productattribute-form" }))'); return false;">
-						<i class="fa fa-plus"></i>&nbsp;@T("Common.Options.Add")
-					</button>
-					<input type="submit" id="btnRefresh" name="btnRefresh" style="display: none" />
-					<script type="text/javascript">
-                        $(document).ready(function () {
-                            $('#btnRefresh').click(function () {
-                                $("#productattributeoptions-grid").data('tGrid').ajaxRequest();
-                                return false;
-                            });
-                        });
-					</script>
-				</td>
-			</tr>*@
 		</table>
+
+		<input type="button" id="btnOption" name="btnOption" style="display: none" />
+		<input type="button" id="btnOptionRefresh" name="btnOptionRefresh" value="" style="display: none" />
+
+		<script type="text/javascript">
+			$(document).ready(function () {
+				// refresh options set grid
+                $('#btnRefresh').click(function () {
+                	$('#productattributeoptionsset-grid').data('tGrid').ajaxRequest();
+                    return false;
+                });
+
+				// refresh options set child grid
+                $(document).on('click', 'input[id=btnOptionRefresh]', function () {
+                	$('#productattributeoptions-grid' + $(this).val()).data('tGrid').ajaxRequest();
+                	return false;
+                });
+
+				// add option
+                $(document).on('click', 'a.insert-option', function (e) {
+                	e.preventDefault();
+                	var id = $(this).closest('.t-grid').attr('id').replace('productattributeoptions-grid', '');
+					$('#btnOptionRefresh').val(id);
+                	openPopup('@Url.Content("~/Admin/ProductAttribute/OptionCreatePopup/")' + id + '?&btnId=btnOptionRefresh');
+                	return false;
+                });
+
+				// edit option
+				$(document).on('click', 'a.edit-option', function (e) {
+					e.preventDefault();
+					var id = $(this).closest('.t-grid').attr('id').replace('productattributeoptions-grid', '');
+					$('#btnOptionRefresh').val(id);
+					openPopup($(this).attr('href'));
+					return false;
+				});
+
+				// delete option
+				$(document).on('click', 'a.delete-option', function (e) {
+					e.preventDefault();
+					var grid = $(this).closest('.t-grid').data('tGrid');
+					$(this).doAjax({
+						type: 'POST',
+						ask: '@T("Admin.Common.AskToProceed")',
+						callbackSuccess: function () {
+							grid.ajaxRequest();
+						}
+					});
+					return false;
+				});
+			});
+
+			function onDataBoundOptionsGrid() {
+				$('div[id^=productattributeoptions-grid]').find('.btn-link').removeClass('t-button');
+			}
+		</script>
 	}
 	else
 	{
