--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/Edit.cshtml
@@ -93,10 +93,80 @@
 		.Render();
 }
 <script type="text/javascript">
-    $(document).ready(function () {
+	$(document).ready(function () {
+		// Copy product
         $("#copyproduct").click(function (e) {
             e.preventDefault();
             $('#copyproduct-window').find('form').submit();
         });
+
+    	// Show modal dialog to copy attribute options
+        $(document).on('change', '#productvariantattributes-grid select[id^=OptionsSetsChoice]', function (e) {
+        	e.stopPropagation();
+
+        	var select = $(e.currentTarget),
+				form = $('#CopyOptionsForm'),
+				productVariantAttributeId = select.attr('id').replace('OptionsSetsChoice', '');
+
+        	form.find('input[name=productVariantAttributeId]').val(productVariantAttributeId);
+        	form.find('input[name=optionsSetId]').val(select.val());
+
+        	var hint = $('#CopyOptionsHintTemplate').text().replace('{0}', select.find(':selected').text());
+        	$('#CopyOptionsHint').text(hint);
+
+        	$('#CopyAttributeOptionsDialog').modal('show');
+        });
+
+    	// Copy attribute options
+        $('#btnCopyAttributeOptions').click(function () {
+        	$('#CopyOptionsForm').doAjax({
+        		type: 'POST',
+        		callbackSuccess: function () {
+        			$('#productvariantattributes-grid').data('tGrid').ajaxRequest();
+        		}
+        	});
+        });
     });
 </script>
+
+@* Copy attribute options dialog. Must not be placed inside another form. *@
+@if (Model.Id != 0 && Model.NumberOfAvailableProductAttributes > 0)
+{
+	<div id="CopyAttributeOptionsDialog" class="modal hide fade" tabindex="-1">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal"><b>&#215;</b></button>
+			<h4 class="caption">@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.CopyOptions")</h4>
+		</div>
+		<div class="modal-body">
+
+			<form id="CopyOptionsForm" method="POST" action="@Url.Action("CopyAttributeOptions", "Product")">
+				<input type="hidden" name="productVariantAttributeId" value="" />
+				<input type="hidden" name="optionsSetId" value="" />
+
+				<div id="CopyOptionsHintTemplate" class="hide">@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.CopyOptionsHint")</div>
+				<p id="CopyOptionsHint"></p>
+
+				<div>
+					<p>@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.AskExistingValues")</p>
+					<div class="radio">
+						<label>
+							<input type="radio" name="deleteExistingValues" value="false" checked="checked" />
+							@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.MergeExistingValues")
+						</label>
+					</div>
+					<div class="radio">
+						<label>
+							<input type="radio" name="deleteExistingValues" value="true" />
+							@T("Admin.Catalog.Products.ProductVariantAttributes.Attributes.Values.DeleteExistingValues")
+						</label>
+					</div>
+				</div>
+			</form>
+
+		</div>
+		<div class="modal-footer">
+			<button id="btnCopyAttributeOptions" class="btn btn-primary" data-dismiss="modal">@T("Common.OK")</button>
+			<button class="btn" data-dismiss="modal">@T("Common.Cancel")</button>
+		</div>
+	</div>
+}
