--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/CurrencySelector.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/CurrencySelector.cshtml
@@ -10,20 +10,6 @@
     var webHelper = EngineContext.Current.Resolve<IWebHelper>();
     var activeCurr = Model.AvailableCurrencies.Where(x => x.Id == Model.CurrentCurrencyId).FirstOrDefault();
 
-    @*<div  id="currency-selector" class="regional-selector">
-		<ul class="list-unstyled clearfix">
-			@foreach (var currency in Model.AvailableCurrencies)
-			{
-				var href = webHelper.ModifyQueryString(Url.RouteUrl("ChangeCurrency", new { customercurrency = currency.Id }), "returnurl=" + HttpUtility.UrlEncode(HttpContext.Current.Request.RawUrl), null);
-				<li class="list-inline-item@(currency.Id == Model.CurrentCurrencyId ? " selected" : "")">
-					<a class="currency regional-label" href="@href" data-toggle="tooltip nofollow" title="@currency.ISOCode">
-						@currency.Symbol
-					</a>
-				</li>
-			}
-		</ul>
-	</div>*@
-
     <div class="dropdown currency-selector">
         <a class="menubar-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
 			<span>@activeCurr.ISOCode (@activeCurr.Symbol)</span>
@@ -35,7 +21,7 @@
             {
                 var href = webHelper.ModifyQueryString(Url.RouteUrl("ChangeCurrency", new { customercurrency = curr.Id }), "returnurl=" + HttpUtility.UrlEncode(HttpContext.Current.Request.RawUrl), null);
 
-                <a href="@href" class="dropdown-item" title="@curr.Name" rel="nofollow">
+                <a href="@href" class="dropdown-item" title="@curr.Name" rel="nofollow" data-selected="@(curr.Equals(activeCurr) ? "true" : "false")">
                     @curr.Name
                 </a>
             }
