--- a/src/Presentation/SmartStore.Web/Views/Search/Search.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/Search.cshtml
@@ -25,6 +25,10 @@
 	}
 }
 
+@section left {
+	@{ Html.RenderAction("Filter"); }
+}
+
 <div class="page search-page">
 	<div class="page-title">
 		<h1 class="h3">
