--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -80,9 +80,8 @@
 
 		// Shop
 		jsRoot + "public.common.js",
+		jsRoot + "public.search.js",
 		jsRoot + "public.offcanvas-cart.js",
-		jsRoot + "public.product-detail-2.js", // TODO: (mc) Remove public.product-detail.js once work is finished
-		jsRoot + "public.product-filter.js",
 		jsRoot + "public.offcanvas-menu.js");
 }
 <!DOCTYPE html>
