--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.FilterSort.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.FilterSort.cshtml
@@ -5,7 +5,7 @@
 <!-- Filter -->
 <div class="artlist-action artlist-action--filter flex-grow-1 hidden-lg-up">
 	<div class="mf-dropdown">
-		<button class="btn btn-warning btn-labeled icon-right btn-no-border btn-block">
+		<button class="btn btn-warning btn-labeled icon-right btn-no-border btn-block btn-toggle-filter-widget">
 			<span>@T("Products.ToFilter")</span>
 			<b><i class="fa fa-fw fa-sliders"></i></b>
 		</button>
