--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -74,8 +74,11 @@
     }
 }
 
-<div class="page category-page">
+@section left {
+	@{ Html.RenderAction("Filter", "Search"); }
+}
 
+<div class="page category-page">
     <div class="page-title">
         <h1 class="h3">
 			@(Model.FullName.HasValue() ? Model.FullName : Model.Name)
