--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
@@ -1,3 +1,4 @@
+/// <reference path="shared/_mixins.scss" />
 /// <reference path="bs4/scss/bootstrap.scss" />
 
 //
@@ -219,13 +220,128 @@ $searchbox-hit-tag-color:           darken($brand-warning, 10%);
 	line-height: 1.3;
 	max-height: 200px;
 	overflow-y: hidden;
+    padding: 2px 0;
 }
 
 .facet-values.in .facet-values-inner {
 	overflow-y: auto;
 }
 
-.facet-hit-count {
-	color: #999;
-	padding-left: 0.2rem;
+
+//
+// Facettes (Check/Radio)
+// --------------------------------------------------
+
+$facet-control-size:        20px;
+
+@keyframes facet-control-borderscale {
+    50% { box-shadow: 0 0 0 2px rgba(#000, 0.4); }
+}
+
+.facet-control-ui {
+    position: absolute;
+    display: block;
+    left: 2px;
+    width: $facet-control-size;
+    height: $facet-control-size;
+    line-height: $facet-control-size;
+
+    border: 1px solid rgba(#000, 0.15);
+    border-radius: 2px;
+    box-shadow: none;
+    transition: border-color 0.2s ease-in;
+
+    &:after {
+        @include fontawesome("\f00c");
+        display: block;
+        opacity: 0;
+        transform: scale(0.2);
+        transition: all 0.2s ease-in;
+        width: $facet-control-size;
+        height: $facet-control-size;
+        line-height: inherit;
+        text-align: center;
+        vertical-align: middle;
+        font-size: 14px;
+        margin-top: -1px;
+        margin-left: -1px;
+        color: $brand-warning;
+    }
+
+    *:checked + & {
+        border-color: rgba(#000, 0.4);
+        vertical-align: middle;
+        text-align: center;
+        box-shadow: none;
+        animation: facet-control-borderscale 0.3s ease-in;
+
+        &:after {
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
+}
+
+.facet-check,
+.facet-radio {
+    position: relative;
+    display: block;
+
+    label {
+        cursor: pointer;
+        padding-bottom: 0.75rem;
+        margin-bottom: 0;
+        min-height: $facet-control-size;
+    }
+
+    &:last-child label {
+        padding-bottom: 0;
+    }
+
+    input[type=checkbox],
+    input[type=radio] {
+        position: absolute;
+        clip: rect(0, 0, 0, 0);
+    }
+}
+
+.facet-check .facet-control-native {
+    + .facet-control-ui {
+        border-radius: 2px;
+    }
+}
+
+.facet-radio .facet-control-native {
+    + .facet-control-ui {
+        border-radius: 50%;
+
+        &:after {
+            content: "\f111";
+        }
+    }
+}
+
+
+//
+// Facet Label
+// --------------------------------------------------
+
+.facet-label {
+    position: relative;
+    display: inline-block;
+    padding-left: $facet-control-size + ($facet-control-size / 1.5);
+    padding-top: 1px;
+
+    &[data-count]:after {
+        content: "(" attr(data-count) ")";
+        position: relative;
+        display: inline-block;
+	    color: rgba($body-color, 0.6);
+	    padding-left: 0.2rem;
+        font-weight: 400;
+    }
+
+    .facet-control-native:checked ~ & {
+        font-weight: 600;
+    }
 }
