Fixed navigation bug

--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/ShopBar.Tools.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/ShopBar.Tools.cshtml
@@ -100,7 +100,7 @@
 {
 	<aside id="offcanvas-menu" class="offcanvas x-offcanvas-lg offcanvas-overlay offcanvas-left offcanvas-shadow" x-data-lg="true" data-blocker="true" data-overlay="true" x-data-placement="left">
         <div class="offcanvas-content">
-            <div id="menu-container" class="offcanvas-scrollable" 
+            <div id="menu-container" 
                  data-url-home="@(Url.Action("OffCanvasMenu", "Catalog"))" 
                  data-url-item="@(Url.Action("OffCanvasMenuCategories", "Catalog"))"
                  data-url-manufacturer="@(Url.Action("OffCanvasMenuManufacturer", "Catalog"))">
